# fuji

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/character_a/: CMakeLists.txt  main.cpp
examples/character_a/shaders/: texture.frag  texture.vert
examples/common/: vulkan_engine.cpp  vulkan_engine.hpp
include/fuji/: fuji.hpp
include/fuji/core/: core.hpp  instance.hpp
include/fuji/core/internal/utility/: graphics_pipeline_create_info_template.hpp  primitive_formats.hpp  shader_module.hpp  shader_stage_flow.hpp  vertex_shader_input_layout.hpp
include/fuji/text/: text.hpp
src/core/: core.cpp  instance.cpp
src/core/internal/utility/: graphics_pipeline_create_info_template.cpp  shader_module.cpp  shader_stage_flow.cpp  vertex_shader_input_layout.cpp
src/text/: text.cpp
test/: CMakeLists.txt  fuji_test.cpp
test/core/internal/utility/: shader_module_test.cpp  shader_stage_flow_test.cpp  vertex_shader_input_layout_test.cpp
test/resource/shader/: test.vert
